--- a/lecturerecommendation/lecturerecommendation/templates/main.html
+++ b/lecturerecommendation/lecturerecommendation/templates/main.html
@@ -1,1 +1,5 @@
 <h1> Lecture Recommendation System </h1>
+<form action="" method="POST">{% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" />
+</form>
