models+template updated

--- a/lecturerecommendation/lecturerecommendation/templates/main.html
+++ b/lecturerecommendation/lecturerecommendation/templates/main.html
@@ -1,5 +1,9 @@
+<html>
+<body>
 <h1> Lecture Recommendation System </h1>
 <form action="" method="POST">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" />
 </form>
+</body>
+</html>
