background and lecture result

--- a/lecturerecommendation/lecturerecommendation/templates/main.html
+++ b/lecturerecommendation/lecturerecommendation/templates/main.html
@@ -2,20 +2,24 @@
 
 <head>
 	<style>
+	#yazi {
+		color:white
+	}
 	#result{
 	 position:relative;
      margin-left:40%;
      }
      #question{
+			 color:white;
       position:absolute;
      }
      </style>
 	</head>
-	<body>
+<body style="background-color:#DB7093">
 
-<body>
 
 <h1> Lecture Recommendation System </h1>
+<h2>CenkBengisuCan</h2>
 <section id="question">
 <form action="" method="POST">{% csrf_token %}
     {{ form.as_p }}
