design wallpaper + questions updated

--- a/lecturerecommendation/lecturerecommendation/templates/main.html
+++ b/lecturerecommendation/lecturerecommendation/templates/main.html
@@ -14,25 +14,19 @@
        color:white;
       position:absolute;
      }
+     body{
+      background-image: url("http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-275416.jpg");
+      background-size: 1600px 700px;
+     }
      </style>
+
+
   </head>
 
-	<style>
-	#yazi {
-		color:white
-	}
-	#result{
-	 position:relative;
-     margin-left:40%;
-     }
-     #question{
-			 color:white;
-      position:absolute;
-     }
-     </style>
+	
 	</head>
 
-<body style="background-color:#DB7093">
+<body>
 
 
 <h1> Lecture Recommendation System </h1>
