--- a/lecturerecommendation/lecturerecommendation/templates/main.html
+++ b/lecturerecommendation/lecturerecommendation/templates/main.html
@@ -9,6 +9,9 @@
   #result{
    position:relative;
      margin-left:40%;
+     
+     color:white;
+     background-color:black;
      }
      #question{
        color:white;
@@ -39,7 +42,9 @@
 
 </section>
 <section id="result">
+  <p>Sectigin ders: {{ ders }}</p>
    <p>{{ rec }}</p>
+
   </section>
 
 </body>
